--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>random user and company generator</title>
+    <title>Random user and Company generator</title>
 </head>
 <body>
     <h1>Welcme to out first typescript project</h1>
