--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random User and Company generator</title>
+    <title>A Random User and Company Generatorusing TS</title>
 </head>
 <body>
     <h1>Welcome to our first typescript project</h1>
 
 
+    <div id="map" style="height: 400px;"></div>
 
-
+    <!-- Add API key -->
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=myAPIkey&callback=Function.prototype"></script> -->
 
 
     <script type="module" src="./src/index.ts" ></script>
